Add custom allocator and page pool