@@ -115,7 +115,8 @@ subprojects {
                                  "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
                                  "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
                                  "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-                                 "--add-exports=java.base/java.lang.reflect=ALL-UNNAMED"]
+                                 "--add-exports=java.base/java.lang.reflect=ALL-UNNAMED"
+        ]
     }
 
     compileTestJava {
@@ -260,6 +261,7 @@ subprojects {
                  "--add-opens=java.base/java.io=ALL-UNNAMED",
                  "--add-opens=java.base/java.util=ALL-UNNAMED",
                  "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+                "--enable-native-access=ALL-UNNAMED",
                  "-XX:+UnlockDiagnosticVMOptions",
                  "-XX:+DebugNonSafepoints",
                  //"-XX:+UseShenandoahGC",
